# aurion

./: .gitignore  README.md  build.sh  meson.build
assets/: character.gltf  emissive.frag  emissive.vert  light.frag  light.vert  skybox.vert  sphere.glb  sphere.gltf  sphere.mtl  test.mtl
include/: assets.h  camera.h  common.h  components.h  defines.h  ecs.h  graphics.h  gui.h  input.h  world.h
include/glad/: glad.h
src/: assets.c  camera.c  ecs.c  glad.c  graphics.c  gui.c  input.c  main.c  sandbox.c  test_ecs.c  text_app.c  world.c
subprojects/: flecs.wrap  freetype.wrap
